--- a/countdown.html
+++ b/countdown.html
@@ -76,7 +76,19 @@
     <div class="slide active">
         <h1>Welcome to Hacktrin XI</h1>
         <p>Once you have signed in, help yourself to some light breakfast!<br><br>
-        Opening ceremonies will begin at 9:20, so feel free to get settled + meet new friends!</p>
+        Opening ceremonies will begin at 9:20, <br>so feel free to get settled + meet new friends!</p>
+        <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:20px;">
+        <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:400px;">
+        <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:780px;">
+        <img src="logo gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
+        <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
+    </div>
+
+    <div class="slide">
+        <h1>The Prompt:</h1>
+        <p>Step into the roles of your teachers and envision a piece of technology that would streamline their teaching process and make teaching easier. As students yourselves, consider what kind of technology would best help your learning in a more engaging and effective manner. Imagine a world where education is more accessible to everyone, and think about how technology can bridge that gap. All these innovations fall under the category of ed-tech, short for educational technology, and it is one of the fastest growing industries in the world. Your challenge is to devise an ed-tech solution that holds significant value in an educational setting. Create a piece of technology that you believe would profoundly impact the classroom environment for both teachers and students. </p>
+        <img src="logo gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
+        <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
     </div>
 
     <!-- Slide 2: Countdown -->
@@ -88,7 +100,14 @@
             <span id="minutes"></span> minutes,
             <span id="seconds"></span> seconds
         </div>
-        <p style="font-size:41px">Share your 3-minute video to hacktrin@trinityschoolnyc.org on Google Drive before 4PM!</p>
+        <p style="font-size:41px">
+          Share your 3-minute video to hacktrin@trinityschoolnyc.org on Google Drive before 4PM!</p>
+
+          <img src="tiger_HT.png" style="scale:50%; position:absolute; transform: scaleX(-1);top:440px;left:20px;">
+          <img src="tiger_HT.png" style="scale:50%; position:absolute; transform: scaleX(-1);top:440px;left:400px;">
+          <img src="tiger_HT.png" style="scale:50%; position:absolute; transform: scaleX(-1);top:440px;left:780px;">
+          <img src="logo gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
+          <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
     </div>
 
     <!-- Slide 3: Project Sharing -->
@@ -96,6 +115,8 @@
         <h1>Thank you so much for sharing your projects!</h1>
         <p>Please help clean up the space while the judges decide a winner!<br><br>
         Once the judges decide on a winner, please take a seat with your teams to hear who won!</p>
+        <img src="logo gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
+        <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
     </div>
 
     <!-- Slide 4: Event Conclusion -->
@@ -103,6 +124,11 @@
         <h1 style="font-size:109px">Thank you so much for coming!</h1>
         <p>Please leave the space as you found it!<br>
         Be sure to grab some stickers + a shirt on your way out!!</p>
+        <img src="tiger_HT.png" style="scale:50%; position:absolute; top:400px;left:20px;">
+        <img src="tiger_HT.png" style="scale:50%; position:absolute; top:400px;left:400px;">
+        <img src="tiger_HT.png" style="scale:50%; position:absolute; top:400px;left:780px;">
+        <img src="logo gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
+        <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
     </div>
 
     <script>
