--- a/countdown.html
+++ b/countdown.html
@@ -5,7 +5,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet">
-    <title>Hacktrin XI Slideshow</title>
+    <title>Hacktrin XII Slideshow</title>
     <style>
         /* CSS styles for the slideshow */
         body {
@@ -74,26 +74,28 @@
 <body>
     <!-- Slide 1: Welcome Message -->
     <div class="slide active">
-        <h1>Welcome to Hacktrin XI</h1>
+        <h1>Welcome to Hacktrin XII</h1>
         <p>Once you have signed in, help yourself to some light breakfast!<br><br>
         Opening ceremonies will begin at 9:20, <br>so feel free to get settled + meet new friends!</p>
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:20px;">
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:400px;">
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:780px;">
-        <img src="logo gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
+        <img src="logo XII gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
         <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
     </div>
 
     <div class="slide">
         <h1>The Prompt:</h1>
-        <p>Step into the roles of your teachers and envision a piece of technology that would streamline their teaching process and make teaching easier. As students yourselves, consider what kind of technology would best help your learning in a more engaging and effective manner. Imagine a world where education is more accessible to everyone, and think about how technology can bridge that gap. All these innovations fall under the category of ed-tech, short for educational technology, and it is one of the fastest growing industries in the world. Your challenge is to devise an ed-tech solution that holds significant value in an educational setting. Create a piece of technology that you believe would profoundly impact the classroom environment for both teachers and students. </p>
-        <img src="logo gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
+        <p>In a world that feels increasingly interconnected yet distant at times, your challenge is to create a piece of technology that fosters meaningful connections. Whether it’s bridging the gap between generations, strengthening global communication, building communities, or improving access to critical resources, your innovation should aim to bring people closer together.
+Imagine technology that connects students with mentors, remote workers with their teams, or individuals with untapped opportunities. How can technology strengthen bonds, break down barriers, and create networks that transcend physical, social, or cultural divides? The power of connection is yours to explore—design a solution that makes the world feel just a little smaller, yet more united.
+ </p>
+        <img src="logo XII gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
         <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
     </div>
 
     <!-- Slide 2: Countdown -->
     <div class="slide">
-        <h1 style="font-size:100px">Hacktrin XI Projects Due in ...</h1>
+        <h1 style="font-size:100px">Hacktrin XII Projects Due in ...</h1>
         <div id="countdown">
 
             <span id="hours"></span> hours,
@@ -101,12 +103,13 @@
             <span id="seconds"></span> seconds
         </div>
         <p style="font-size:41px">
-          Share your 3-minute video to hacktrin@trinityschoolnyc.org on Google Drive before 4PM!</p>
+          Prepare a 3-minute presentation to present your project. Presentations will be presented to our judge panel and all participants at 4:15PM!
+</p>
 
           <img src="tiger_HT.png" style="scale:50%; position:absolute; transform: scaleX(-1);top:440px;left:20px;">
           <img src="tiger_HT.png" style="scale:50%; position:absolute; transform: scaleX(-1);top:440px;left:400px;">
           <img src="tiger_HT.png" style="scale:50%; position:absolute; transform: scaleX(-1);top:440px;left:780px;">
-          <img src="logo gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
+          <img src="logo XII gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
           <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
     </div>
 
@@ -115,7 +118,7 @@
         <h1>Thank you so much for sharing your projects!</h1>
         <p>Please help clean up the space while the judges decide a winner!<br><br>
         Once the judges decide on a winner, please take a seat with your teams to hear who won!</p>
-        <img src="logo gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
+        <img src="logo XII gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
         <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
     </div>
 
@@ -127,7 +130,7 @@
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:400px;left:20px;">
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:400px;left:400px;">
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:400px;left:780px;">
-        <img src="logo gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
+        <img src="logo XII gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
         <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
     </div>
 
@@ -135,7 +138,7 @@
         // JavaScript for the countdown
         function countdown() {
             var now = new Date();
-            var eventDate = new Date(2024, 1, 24, 16, 0, 0); // February 24th at 4:00 PM
+            var eventDate = new Date(2025, 1, 22, 16, 0, 0); // February 24th at 4:00 PM
 
             var currentTime = now.getTime();
             var eventTime = eventDate.getTime();
