--- a/countdown.html
+++ b/countdown.html
@@ -80,8 +80,8 @@
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:20px;">
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:400px;">
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:780px;">
-        <img src="logo XII gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
-        <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
+        <img src="logo XII gold.png" style="scale:10%;position:absolute;top:255px;left:940px;">
+        <h1 style="scale:30%;position:absolute;top:615px;left:860px;">@trinitycompsci</h1>
     </div>
 
     <div class="slide">
@@ -89,8 +89,8 @@
         <p>In a world that feels increasingly interconnected yet distant at times, your challenge is to create a piece of technology that fosters meaningful connections. Whether it’s bridging the gap between generations, strengthening global communication, building communities, or improving access to critical resources, your innovation should aim to bring people closer together.
 Imagine technology that connects students with mentors, remote workers with their teams, or individuals with untapped opportunities. How can technology strengthen bonds, break down barriers, and create networks that transcend physical, social, or cultural divides? The power of connection is yours to explore—design a solution that makes the world feel just a little smaller, yet more united.
  </p>
-        <img src="logo XII gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
-        <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
+ <img src="logo XII gold.png" style="scale:10%;position:absolute;top:255px;left:940px;">
+ <h1 style="scale:30%;position:absolute;top:615px;left:860px;">@trinitycompsci</h1>
     </div>
 
     <!-- Slide 2: Countdown -->
@@ -109,17 +109,24 @@ Imagine technology that connects students with mentors, remote workers with thei
           <img src="tiger_HT.png" style="scale:50%; position:absolute; transform: scaleX(-1);top:440px;left:20px;">
           <img src="tiger_HT.png" style="scale:50%; position:absolute; transform: scaleX(-1);top:440px;left:400px;">
           <img src="tiger_HT.png" style="scale:50%; position:absolute; transform: scaleX(-1);top:440px;left:780px;">
-          <img src="logo XII gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
-          <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
+          <img src="logo XII gold.png" style="scale:10%;position:absolute;top:255px;left:940px;">
+          <h1 style="scale:30%;position:absolute;top:615px;left:860px;">@trinitycompsci</h1>
     </div>
 
     <!-- Slide 3: Project Sharing -->
     <div class="slide">
         <h1>Thank you so much for sharing your projects!</h1>
-        <p>Please help clean up the space while the judges decide a winner!<br><br>
-        Once the judges decide on a winner, please take a seat with your teams to hear who won!</p>
-        <img src="logo XII gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
-        <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
+        <p>Please help clean up the space while the judges decide a winner!<br>
+
+          <div style="display: flex; align-items: center; justify-content: center; gap: 20px;">
+              <p style="flex: 1; text-align: right; font-size: 32px;">
+                  Attendees' vote: Scan the QR code to vote for your favorite project! The team with the most votes wins the Audience Choice Award! (No voting for your own team!)
+              </p>
+              <img src="vote code.png" alt="Vote QR Code" style="width: 200px; height: 200px; flex-shrink: 0;">
+          </div>
+
+        <img src="logo XII gold.png" style="scale:10%;position:absolute;top:255px;left:940px;">
+        <h1 style="scale:30%;position:absolute;top:615px;left:860px;">@trinitycompsci</h1>
     </div>
 
     <!-- Slide 4: Event Conclusion -->
@@ -130,8 +137,8 @@ Imagine technology that connects students with mentors, remote workers with thei
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:400px;left:20px;">
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:400px;left:400px;">
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:400px;left:780px;">
-        <img src="logo XII gold.png" style="scale:10%;position:absolute;top:285px;left:940px;">
-        <h1 style="scale:30%;position:absolute;top:640px;left:860px;">@trinitycompsci</h1>
+        <img src="logo XII gold.png" style="scale:10%;position:absolute;top:255px;left:940px;">
+        <h1 style="scale:30%;position:absolute;top:615px;left:860px;">@trinitycompsci</h1>
     </div>
 
     <script>
