--- a/countdown.html
+++ b/countdown.html
@@ -77,6 +77,10 @@
         <h1>Welcome to Hacktrin XII</h1>
         <p>Once you have signed in, help yourself to some light breakfast!<br><br>
         Opening ceremonies will begin at 9:20, <br>so feel free to get settled + meet new friends!</p>
+  <br>
+      <p>Wifi: Trinity-Guest</p>
+      <p>PW: Blizzard</p>
+      
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:20px;">
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:400px;">
         <img src="tiger_HT.png" style="scale:50%; position:absolute; top:440px;left:780px;">
